--- a/src/layouts/Contacts/Contacts.css
+++ b/src/layouts/Contacts/Contacts.css
@@ -16,9 +16,11 @@
   gap: 40px;
   justify-content: center;
   align-items: start;
-  margin: 100px auto;
+  margin: 0 auto;
+  margin-bottom: 60px; /* Отступ снизу */
   max-width: 1400px;
   padding: 0 40px;
+  width: 100%;
 }
 
 .contact-info-container {
